updating bookings url

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -86,7 +86,7 @@
             <h5 class="bold-text mt-3">Amenities</h5>
             <br>
             <div class="row">
-                <div class="col-md-6 col-sm-4">
+                <div class="col-md-6 col-sm-4 cursor-pointer">
                     <input type="checkbox" name="amenities[wifi]" id="wifi" class="amenities_input">
                     <label for="wifi">
                         <i class="fa-solid fa-wifi m-3"></i>
@@ -94,7 +94,7 @@
                     </label>
                 </div>
                 
-                <div class="col-md-6 col-sm-4">
+                <div class="col-md-6 col-sm-4 cursor-pointer">
                     <input type="checkbox" name="amenities[washing_machine]" id="washing_machine" class="amenities_input">
                     <label for="washing_machine ">
                         <i class="fa-solid fa-cash-register m-3"></i>
@@ -105,7 +105,7 @@
                 
             </div>
             <div class="row">
-                <div class="col-md-6 col-sm-4 amenities_item">
+                <div class="col-md-6 col-sm-4 amenities_item cursor-pointer">
                     <input type="checkbox" name="amenities[tv]" id="tv" class="amenities_input">
                     <label for="tv">
                         <i class="fa-solid fa-tv m-3"></i>
@@ -113,7 +113,7 @@
                     </label>
                 </div>
                 
-                <div class="col-md-6 col-sm-4 amenities_item">
+                <div class="col-md-6 col-sm-4 amenities_item cursor-pointer">
                     <input type="checkbox" name="amenities[kitchen]" id="kitchen" class="amenities_input">
                     <label for="kitchen ">
                         <i class="fa-solid fa-kitchen-set m-3"></i>
@@ -124,7 +124,7 @@
                 
             </div>
             <div class="row">
-                <div class="col-md-6 col-sm-4 amenities_item">
+                <div class="col-md-6 col-sm-4 amenities_item cursor-pointer">
                     <input type="checkbox" name="amenities[fridge]" id="fridge" class="amenities_input">
                     <label for="fridge">
                         <img src="/fridge.png" alt="" srcset=" " class="m-3">
@@ -132,7 +132,7 @@
                     </label>
                 </div>
                 
-                <div class="col-md-6 col-sm-4 amenities_item">
+                <div class="col-md-6 col-sm-4 amenities_item cursor-pointer">
                     <input type="checkbox" name="amenities[air_conditioning]" id="air_conditioning" class="amenities_input">
                     <label for="air_conditioning ">
                         <i class="fa-brands fa-galactic-republic m-3"></i>
@@ -143,7 +143,7 @@
                 
             </div>
             <div class="row">
-                <div class="col-md-6 col-sm-4 amenities_item">
+                <div class="col-md-6 col-sm-4 amenities_item cursor-pointer">
                     <input type="checkbox" name="amenities[cooking_essentials]" id="cooking_essentials" class="amenities_input">
                     <label for="cooking_essentials">
                         <i class="fa-solid fa-utensils m-3"></i>
@@ -151,7 +151,7 @@
                     </label>
                 </div>
                 
-                <div class="col-md-6 col-sm-4 amenities_item">
+                <div class="col-md-6 col-sm-4 amenities_item cursor-pointer">
                     <input type="checkbox" name="amenities[garden]" id="garden" class="amenities_input">
                     <label for="garden ">
                         <i class="fa-solid fa-tree-city m-3"></i>
@@ -162,7 +162,7 @@
                 
             </div>
             <div class="row">
-                <div class="col-md-6 col-sm-4 amenities_item">
+                <div class="col-md-6 col-sm-4 amenities_item cursor-pointer">
                     <input type="checkbox" name="amenities[iron]" id="iron" class="amenities_input">
                     <label for="iron">
                         <img src="/iron.png" alt="" class="m-3">
@@ -170,7 +170,7 @@
                     </label>
                 </div>
                 
-                <div class="col-md-6 col-sm-4 amenities_item">
+                <div class="col-md-6 col-sm-4 amenities_item cursor-pointer">
                     <input type="checkbox" name="amenities[smooking]" id="sooking" class="amenities_input">
                     <label for="smooking ">
                         <i class="fa-solid fa-smoking m-3"></i> Smooking allowed
