--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -94,10 +94,10 @@
         &#8377; <%= data.price.toLocaleString("en-IN")%> /night
       </p>
       <% if(currUser) {%>
-        <% if(!bookings.listing.includes(data.id)) { %>
+        <% if(booking.length==0) { %>
           <div class="reserve_div ml-3 mr-3" id="booking" data-listing-id="<%=data._id%>">Reserve</div>
         <%}%>
-        <% if(bookings.listing.includes(data.id)) { %>
+        <% if(bookings.length>0) { %>
           <div class="reserve_div ml-3 mr-3 bg-secondary" >Sold out</div>
         <%}%>
 
