--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,53 @@
-<footer>
+<footer class="d-flex flex-wrap">
+    <div class="footer-box">
+        <h3 class="mb-1" style="color: #fe424d;">Wanderlust</h3>
+        <p class="font-s-1 m-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus doloribus qui iste sapiente. Esse beatae deserunt officiis ipsam neque suscipit?</p>
+        <br>
+        <div class="footer-icon-main-box d-flex">
+            <div class="footer-icon-box ml-3"><i class="fa-brands fa-square-facebook "></i></div>
+            <div class="footer-icon-box ml-3"><i class="fa-brands fa-square-instagram "></i></div>
+            <div class="footer-icon-box ml-3"><i class="fa-brands fa-linkedin "></i></div>
+        </div>
+        
+    </div>
+    <div class="footer-box">
+        <h5 class="bold-text" style="color: #fe424d;">Company</h5>
+        <ul class="font-s-1 mt-1 p-0">
+            <a href="" class="footer-a">
+               <li >About</li>
+            </a>
+            <a href="" class="footer-a">
+                <li>License</li>
+            </a> 
+            <a href="" class="footer-a">
+               <li>Privacy</li>
+            </a>
+            <a href="" class="footer-a">
+                <li>Trems and Services</li>
+            </a>
+        </ul>
+    </div>
+    <div class="footer-box">
+        <h5 class="bold-text" style="color: #fe424d;">Privacy</h5>
+        <ul class="font-s-1 mt-1 p-0">
+           <a href="" class="footer-a">
+            <li>Terms</li>
+           </a>
+           <a href="" class="footer-a">
+            <li>Sitemap</li>
+           </a> 
+            <a href="" class="footer-a">
+                <li>Privacy</li>
+            </a>
+            <a href="" class="footer-a">
+                <li>Support</li>
+            </a>
+        </ul>
+    </div>
+    
+</footer>
+
+<!-- 
     <div class="f-info">
         <div class="f-info-socials">
             <i class="fa-brands fa-square-facebook"></i>
@@ -23,4 +72,4 @@
         </div>
 
     </div>
-</footer>
+ -->
