Added email functionality

--- a/views/listings/myallReviews.ejs
+++ b/views/listings/myallReviews.ejs
@@ -7,7 +7,8 @@
 
       <div class="d-flex justify-content-cneter flex-wrap">
         <% for(review of Reviews){ %>
-        <div class="card m-3  p-3 pb-1 review_card text-center" style="width:18rem">
+        <div class="card m-3  p-3 review_card pb-1" style="width:18rem">
+
           <div class="card_body" >
     
             <p class="font-w-600 font-s-1"><%= review.listing.title%></p>
