--- a/public/css/style.css
+++ b/public/css/style.css
@@ -326,6 +326,7 @@ footer{
 
 .card-text{
     font-weight: 400 !important;
+    text-align: justify;
 }
 
 a{
@@ -359,15 +360,29 @@ a{
 
 }
 .review_card{
-    min-width:30%;
-    max-width:40%;
+    width: 20rem;
     border: none;    
     box-shadow: 1px 1px 2px #a8a6a6;
     font-size: 0.7rem;
+    background: #f7f5f5;
+    border-radius: 1rem;
 }
 .reserve_card{
-    box-shadow: 2px 2px 5px #a8a6a6;
+    box-shadow: 2px 2px 2px #a8a6a6;
     border-radius: 2rem;
+}
+.cursor_pointor{
+    cursor: pointer;
+}
+.review-img{
+    height: 5.2rem;
+    width: 5.2rem;
+    padding: 0.2rem;
+    float: left;
+    /* color: #fe424d !important; */
+    border: 5px solid #5374db ;
+    border-radius: 50%;
+    margin-right: 1rem;
 }
 .btn_full{
     width: 100%;
