--- a/views/listings/amenities.ejs
+++ b/views/listings/amenities.ejs
@@ -1,6 +1,6 @@
 <div class="row ">
     <div class="col m-3 p-3 ">
-      <h4 class=" mb-3 font-w-600">What this place offers</h4>
+      <h4 class=" mb-3 font-w-600 red">What this place offers</h4>
       <div class="row mt-3">
         <% p_style= data.amenities.includes('wifi')? '' : 'cross_text' %>
         <div class="col <%=p_style%>">
