--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,6 +1,6 @@
 <% layout('layout/boiler') -%>
 <div class="row m-3 d-flex justify-content-center">
-  <div class="col-md-8 ">
+  <div class="col-md-8 " style="background-color: #fff; border-radius: 1rem;">
     <h3 class="text-center mt-3 mb-3 font-w-600">Edit the Listing</h3>
     <form
       method="POST"
