--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -60,29 +60,33 @@
       >
       <p><%=data.bedrooms%> Bedroom . <%= data.maxGuests%> guest</p>
       <hr />
-      <h6 class="card-text mt-3 bold-text">
-        Host &nbsp;&nbsp;
-        <img
+      
+      
+      <img
           src="<%=data.owner.photo%>"
           alt=""
           srcset=""
-          class="owner_img"
-        />
-        <i><%= data.owner.name%></i><br />
-        <p class="card-text" style="padding-left: 7rem">
-          <i class="fa-solid fa-location-dot"></i>&nbsp; <%=
-          data.location.address%>
-        </p>
-      </h6>
+          class="review-img"
+          style="float: left;"
+      />
+      <div class="bold-text mb-3">Hosted by <%= data.owner.name.toUpperCase()%></div>
+      <p class="card-text" >
+          <i class="fa-solid fa-location-dot "></i>&nbsp; <%= data.location.address%>
+      </p>
+      <br>
       <hr />
-      <h4 class="mt-3 mb-3 font-w-600">About This Place</h4>
-      <% let sentence= data.description.split("\n")%> <%
-      sentence.forEach(el=>{ %>
-      <p class="para_style text-align-justify"><%=el%></p>
-      <%})%>
+      
       <br />
     </div>
   </div>
+  <div class="col-8 col-8 offset-lg-2  bg-white p-3 ">
+    <h4 class="mt-3 mb-3 font-w-600 red">About This Place</h4>
+    <% let sentence= data.description.split("\n")%> <%
+    sentence.forEach(el=>{ %>
+    <p class="para_style text-align-justify"><%=el%></p>
+    <%})%>
+  </div>
+
   <div class="col-8 offset-lg-2 mt-3 bg-white">
        
     <%- include("./amenities.ejs")%>
