--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -39,6 +39,7 @@
                        name="email"  
                        class="form-control"
                        id="forgot_email"
+                       placeholder="Enter your email "
                       required
                     >
                     <div class="invalid-feedback">Email can't be empty !</div>
