--- a/views/user/Profile.ejs
+++ b/views/user/Profile.ejs
@@ -9,7 +9,7 @@
                     <li class="mt-3"><a href="/listings/user/reviews"><i class="fa-regular fa-star "></i><span class="hide-user-setting ">&nbsp;&nbsp;&nbsp;&nbsp;Reviews</span></a></li>
                     <li class="mt-3"><a href="/listings/user/wishlist"><i class="fa-solid fa-heart "></i><span class="hide-user-setting ">&nbsp;&nbsp;&nbsp;&nbsp;Favorites</span></a></li>
                     <li class="mt-3"><a href="#"><i class="fa-solid fa-gear "></i><span class="hide-user-setting ">&nbsp;&nbsp;&nbsp;&nbsp;Settings</span></a></li>
-                    <li class="mt-3"><a href="#"> <i class="fa-solid fa-check-to-slot "></i><span class="hide-user-setting ">&nbsp;&nbsp;&nbsp;&nbsp;Billings</span></a></li>
+                    <li class="mt-3"><a href="/listings/user/booking"> <i class="fa-solid fa-check-to-slot "></i><span class="hide-user-setting ">&nbsp;&nbsp;&nbsp;&nbsp;Billings</span></a></li>
                 </ul>
             </div>
         </div>
